last commit We need to make this run faster

--- a/server/FareStartReportingTool/src/main/resources/templates/report.html
+++ b/server/FareStartReportingTool/src/main/resources/templates/report.html
@@ -53,7 +53,7 @@
 
                  <tbody>
                       <tr>
-                        <th scope="row">"Net Sales"></th>
+                        <th scope="row">Net Sales</th>
 
                         <td th:text="${locationalWeeklyReport.data[0].netSales}"></td>
                         <td th:text="${locationalWeeklyReport.data[1].netSales}"></td>
@@ -64,7 +64,7 @@
                         <td th:text="${locationalWeeklyReport.data[6].netSales}"></td>
                     </tr>
                     <tr>
-                        <th scope="row">"Same Day Last Week Sales"></th>
+                        <th scope="row">Same Day Last Week Sales</th>
 
                         <td th:text="${locationalWeeklyReport.data[0].SDLWSales}"></td>
                         <td th:text="${locationalWeeklyReport.data[1].SDLWSales}"></td>
@@ -75,7 +75,7 @@
                         <td th:text="${locationalWeeklyReport.data[6].SDLWSales}"></td>
                     </tr>
                       <tr>
-                        <th scope="row">"Budget"></th>
+                        <th scope="row">Budget</th>
 
                         <td th:text="${locationalWeeklyReport.data[0].budget}"></td>
                         <td th:text="${locationalWeeklyReport.data[1].budget}"></td>
